[gd_scene load_steps=2 format=3 uid="uid://cefwayew7ouqs"]

[ext_resource type="Script" uid="uid://cl38cnn3w05pn" path="res://scripts/ui/main_menu.gd" id="1_sl1te"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_sl1te")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="IPAddressEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "127.0.0.1"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Game"
